--- a/core/pom.xml
+++ b/core/pom.xml
@@ -33,6 +33,7 @@
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
+        <relativePath></relativePath>
     </parent>
 
     <name>redberry-core</name>
