--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -39,6 +39,7 @@
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
+        <relativePath></relativePath>
     </parent>
 
     <name>redberry-groovy</name>
