--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -46,10 +46,13 @@
     <url>http://redberry.cc/</url>
 
     <description>
-        Redberry is an open source Java framework providing capabilities
-        for manipulation with tensors. The framework contains wide spectrum of
-        algorithms required by tensor algebra. It is designed to find analytical
-        solutions of complicated mathematical and physical problems.
+        Redberry is an open source computer algebra system designed for tensor 
+        manipulation.  It implements basic computer algebra system routines as well as 
+        complex tools for real computations in physics. 
+        
+        This is the Groovy facade for Redberry. It contains the classes and 
+        categories defining DSL features and syntax notations for common routines from 
+        redebrry-core and redberry-physics.
     </description>
 
     <licenses>
@@ -95,7 +98,7 @@
 
     <issueManagement>
         <system>Bitbucket</system>
-        <url>https://bitbucket.org/redberry/redberry-physics/issues</url>
+        <url>https://bitbucket.org/redberry/redberry/issues</url>
     </issueManagement>
 
     <build>
