--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,14 +26,14 @@
 
     <groupId>cc.redberry</groupId>
     <artifactId>core</artifactId>
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.4</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
-        <relativePath></relativePath>
+        <relativePath/>
     </parent>
 
     <name>redberry-core</name>
@@ -87,7 +87,7 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-core</connection><url>https://bitbucket.org/redberry/redberry-core/src/</url></scm>
+    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-core</connection><tag>v1.1.4</tag><url>https://bitbucket.org/redberry/redberry-core/src/?at=v1.1.4</url></scm>
 
     <issueManagement>
         <system>YouTRACK</system>
