--- a/physics/pom.xml
+++ b/physics/pom.xml
@@ -26,14 +26,14 @@
 
     <groupId>cc.redberry</groupId>
     <artifactId>physics</artifactId>
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.4</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
-        <relativePath></relativePath>
+        <relativePath/>
     </parent>
 
     <name>redberry-physics</name>
@@ -88,7 +88,7 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-physics</connection><url>https://bitbucket.org/redberry/redberry-physics/src/</url></scm>
+    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-physics</connection><tag>v1.1.4</tag><url>https://bitbucket.org/redberry/redberry-physics/src/?at=v1.1.4</url></scm>
 
     <issueManagement>
         <system>YouTRACK</system>
@@ -146,12 +146,12 @@
         <dependency>
             <groupId>cc.redberry</groupId>
             <artifactId>core</artifactId>
-            <version>1.1.4-SNAPSHOT</version>
+            <version>1.1.4</version>
         </dependency>
         <dependency>
             <groupId>cc.redberry</groupId>
             <artifactId>core</artifactId>
-            <version>1.1.4-SNAPSHOT</version>
+            <version>1.1.4</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
