--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     
     <groupId>redberry.cc</groupId>
     <artifactId>all</artifactId>
-    <version>1.1.4</version>
+    <version>1.1.5-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>redberry-all</name>
 
