--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -20,12 +20,13 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with Redberry. If not, see <http://www.gnu.org/licenses/>.
-  --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cc.redberry</groupId>
     <artifactId>groovy</artifactId>
-    <version>1.1.6-SNAPSHOT</version>
+    <version>1.1.6-RC1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -93,7 +94,7 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry</connection><url>https://bitbucket.org/redberry/redberry/src/</url></scm>
+    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-groovy</connection><tag>v1.1.6-RC1</tag><url>https://bitbucket.org/redberry/redberry-groovy/src/?at=v1.1.6-RC1</url></scm>
 
     <issueManagement>
         <system>YouTRACK</system>
@@ -236,19 +237,19 @@
         <dependency>
             <groupId>cc.redberry</groupId>
             <artifactId>core</artifactId>
-            <version>1.1.6-SNAPSHOT</version>
+            <version>1.1.6-RC1</version>
         </dependency>
         <dependency>
             <groupId>cc.redberry</groupId>
             <artifactId>core</artifactId>
-            <version>1.1.6-SNAPSHOT</version>
+            <version>1.1.6-RC1</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>cc.redberry</groupId>
             <artifactId>physics</artifactId>
-            <version>1.1.6-SNAPSHOT</version>
+            <version>1.1.6-RC1</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
