--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     
     <groupId>redberry.cc</groupId>
     <artifactId>all</artifactId>
-    <version>1.1.6-RC1</version>
+    <version>1.1.6-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>redberry-all</name>
 
@@ -85,7 +85,7 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-all</connection><tag>v1.1.6-RC1</tag><url>https://bitbucket.org/redberry/redberry-all/src/?at=v1.1.6-RC1</url></scm>
+    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-all</connection><url>https://bitbucket.org/redberry/redberry-all/src/</url></scm>
 
     <issueManagement>
         <system>YouTRACK</system>
