--- a/core/pom.xml
+++ b/core/pom.xml
@@ -87,7 +87,7 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-core</connection><url>https://bitbucket.org/redberry/redberry-core/src/</url></scm>
+    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry</connection><url>https://bitbucket.org/redberry/redberry/src/</url></scm>
 
     <issueManagement>
         <system>YouTRACK</system>
