All tests passed.

--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -21,7 +21,8 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with Redberry. If not, see <http://www.gnu.org/licenses/>.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cc.redberry</groupId>
@@ -94,7 +95,10 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry</connection><url>https://bitbucket.org/redberry/redberry/src/</url></scm>
+    <scm>
+        <connection>scm:hg:http://bitbucket.org/redberry/redberry</connection>
+        <url>https://bitbucket.org/redberry/redberry/src/</url>
+    </scm>
 
     <issueManagement>
         <system>YouTRACK</system>
@@ -173,8 +177,11 @@
                         </goals>
                         <configuration>
                             <target>
-                                <taskdef name="groovydoc" classname="org.codehaus.groovy.ant.Groovydoc" classpathref="maven.compile.classpath"/>
-                                <groovydoc destdir="${project.reporting.outputDirectory}/groovydoc" sourcepath="${basedir}/src/main/groovy" use="true" windowtitle="${project.name}" doctitle="${project.name}">
+                                <taskdef name="groovydoc" classname="org.codehaus.groovy.ant.Groovydoc"
+                                         classpathref="maven.compile.classpath"/>
+                                <groovydoc destdir="${project.reporting.outputDirectory}/groovydoc"
+                                           sourcepath="${basedir}/src/main/groovy" use="true"
+                                           windowtitle="${project.name}" doctitle="${project.name}">
                                 </groovydoc>
                             </target>
                         </configuration>
@@ -225,6 +232,21 @@
                 <!--</goals>-->
                 <!--</execution>-->
                 <!--</executions>-->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
+                <configuration>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <!-- Resets the context before running each test -->
+                            <value>cc.redberry.core.GlobalRunListener</value>
+                        </property>
+                    </properties>
+                    <!-- <skipTests>true</skipTests> -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
