--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -31,7 +31,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- <gmavenVersion>1.4</gmavenVersion>
         <gmavenProviderSelection>2.0</gmavenProviderSelection> -->
-        <groovyVersion>2.2.2</groovyVersion>
+        <groovyVersion>2.3.8</groovyVersion>
     </properties>
 
     <parent>
@@ -93,11 +93,11 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-groovy</connection><url>https://bitbucket.org/redberry/redberry-groovy/src/</url></scm>
+    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry</connection><url>https://bitbucket.org/redberry/redberry</url></scm>
 
     <issueManagement>
         <system>YouTRACK</system>
-        <url>http://dev.redberry.cc/</url>
+        <url>http://youtrack.redberry.cc/</url>
     </issueManagement>
 
     <build>
@@ -183,12 +183,12 @@
             <plugin>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-eclipse-compiler</artifactId>
-                <version>2.7.0-01</version>
+                <version>2.9.1-01</version>
                 <extensions>true</extensions>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.2</version>
                 <configuration>
                     <compilerId>groovy-eclipse-compiler</compilerId>
                 </configuration>
@@ -196,18 +196,18 @@
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>2.7.0-01</version>
+                        <version>2.9.1-01</version>
                     </dependency>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-batch</artifactId>
-                        <version>2.1.3-01</version>
+                        <version>2.3.7-01</version>
                     </dependency>
                 </dependencies>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>2.5.2</version>
                 <configuration>
                     <descriptors>
                         <descriptor>groovy-lib-bin.xml</descriptor>
