--- a/physics/pom.xml
+++ b/physics/pom.xml
@@ -87,11 +87,11 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-physics</connection><url>https://bitbucket.org/redberry/redberry-physics/src/</url></scm>
+    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry</connection><url>https://bitbucket.org/redberry/redberry</url></scm>
 
     <issueManagement>
         <system>YouTRACK</system>
-        <url>http://dev.redberry.cc/</url>
+        <url>http://youtrack.redberry.cc/</url>
     </issueManagement>
 
     <build>
@@ -99,7 +99,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.2</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -126,7 +126,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <!-- TODO: remove or replace with custom assembly descriptor -->
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptorRefs>
