--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -191,6 +191,8 @@
                 <version>3.2</version>
                 <configuration>
                     <compilerId>groovy-eclipse-compiler</compilerId>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -275,6 +277,11 @@
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-backports-compat23</artifactId>
+            <version>2.3.5</version>
         </dependency>
     </dependencies>
 </project>
