--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>cc.redberry</groupId>
     <artifactId>core</artifactId>
-    <version>1.1.9</version>
+    <version>1.2-SNAPSHOT-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -86,7 +86,7 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-core</connection><tag>v1.1.9</tag><url>https://bitbucket.org/redberry/redberry-core/src/?at=v1.1.9</url></scm>
+    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-core</connection><url>https://bitbucket.org/redberry/redberry-core/src/</url></scm>
 
     <issueManagement>
         <system>YouTRACK</system>
