--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>cc.redberry</groupId>
     <artifactId>core</artifactId>
-    <version>1.2-SNAPSHOT-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
