--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -20,7 +20,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with Redberry. If not, see <http://www.gnu.org/licenses/>.
-  --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cc.redberry</groupId>
@@ -93,7 +95,10 @@
         </developer>
     </developers>
 
-    <scm><connection>scm:hg:http://bitbucket.org/redberry/redberry-groovy</connection><url>https://bitbucket.org/redberry/redberry-groovy/src/</url></scm>
+    <scm>
+        <connection>scm:hg:http://bitbucket.org/redberry/redberry-groovy</connection>
+        <url>https://bitbucket.org/redberry/redberry-groovy/src/</url>
+    </scm>
 
     <issueManagement>
         <system>YouTRACK</system>
@@ -172,8 +177,11 @@
                         </goals>
                         <configuration>
                             <target>
-                                <taskdef name="groovydoc" classname="org.codehaus.groovy.ant.Groovydoc" classpathref="maven.compile.classpath"/>
-                                <groovydoc destdir="${project.reporting.outputDirectory}/groovydoc" sourcepath="${basedir}/src/main/groovy" use="true" windowtitle="${project.name}" doctitle="${project.name}">
+                                <taskdef name="groovydoc" classname="org.codehaus.groovy.ant.Groovydoc"
+                                         classpathref="maven.compile.classpath"/>
+                                <groovydoc destdir="${project.reporting.outputDirectory}/groovydoc"
+                                           sourcepath="${basedir}/src/main/groovy" use="true"
+                                           windowtitle="${project.name}" doctitle="${project.name}">
                                 </groovydoc>
                             </target>
                         </configuration>
@@ -183,7 +191,7 @@
             <plugin>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-eclipse-compiler</artifactId>
-                <version>2.9.1-01</version>
+                <version>2.9.2-01</version>
                 <extensions>true</extensions>
             </plugin>
             <plugin>
@@ -198,18 +206,18 @@
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>2.9.1-01</version>
+                        <version>2.9.2-01</version>
                     </dependency>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-batch</artifactId>
-                        <version>2.3.7-01</version>
+                        <version>2.4.3-01</version>
                     </dependency>
                 </dependencies>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>2.5.4</version>
                 <configuration>
                     <descriptors>
                         <descriptor>groovy-lib-bin.xml</descriptor>
@@ -230,13 +238,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
+                <version>2.19.1</version>
                 <configuration>
+                    <forkCount>1</forkCount>
                     <properties>
                         <property>
                             <name>listener</name>
                             <!-- Resets the context before running each test -->
-                            <value>cc.redberry.core.GlobalRunListener</value>
+                            <value>cc.redberry.groovy.GroovyGlobalRunListener</value>
                         </property>
                     </properties>
                     <!-- <skipTests>true</skipTests> -->
